# MAGB22Project

./: CMakeLists.txt
include/: parse.h  simplex.h
lib/: types.h
src/: main.c  parse.c  simplex.c
